<resources>
    <string name="app_name">VIPRPG.org</string>
    <string name="online">主站</string>
    <string name="local_games">离线游玩</string>
    <string name="screenshot_gallery">截图图库</string>
    <string name="native_version">版本信息</string>
    <string name="update_heading">应用更新</string>
    <string name="not_checked">尚未检查更新</string>
    <string name="not_checked_detail">检查是否有新版本</string>
    <string name="up_to_date">当前已是最新版本。</string>
    <string name="release_notes_title">更新内容</string>
    <string name="check_update">检查更新</string>
    <string name="download_update">下载新版本</string>
    <string name="auto_check_updates">启动时检查更新</string>
</resources>
